fix hero img height cutoff again

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -174,7 +174,7 @@ nav {
   padding-top: 3rem;
   display: flex;
   justify-content: center;
-  max-height: 100vh;
+  // max-height: 100vh;
 
   img {
     width: 95%;
